# eden2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  abraham.py  abraham2.py  agent.py  api.py  auth.py  base.py  base2.py  comfyui.py  comfyui2.py  config.py  config_utils.py  eden_utils.py  endpoint.py  gcp.py  handlers.py  local_tool.py  main.py  modal_tool.py  models.py  mongo.py  pyproject.toml  replicate_tool.py  requirements.txt  s3.py  s32.py  schema.yaml  server.py  story2.py  test5.py  test6.py  test7.py  test8.py  test8_mars.py  test9.py  test_base.py  test_comfyui_tool.py  (+12 more)
agents/: animator.yaml  anime.yaml  beepler.yaml  eve.yaml  impressionist.yaml  logo.yaml  mars_eve.yaml  photo.yaml  photo2.yaml  pixel.yaml  vincent.yaml  vj.yaml
endpoints/: img2vid.yaml  steerable-motion.yaml  steerable_motion.yaml  style_mixing.yaml  txt2img.yaml  txt2vid_lcm.yaml  vid2vid.yaml  xhibit.yaml
eve/: __init__.py  agent.py  agent2.py  api.py  auth.py  base.py  chat.py  cli.py  comfyui.py  comfyui_tool.py  config.py  eden_utils.py  gcp_tool.py  handlers.py  llm.py  llm2.py  llm3.py  llm4.py  llm5.py  local_tool.py  modal_tool.py  models.py  mongo.py  mongo2.py  mongo3.py  replicate_tool.py  s3.py  soc.py  task.py  test2.py  testagent.py  testagent.yaml  testin.py  thread.py  thread2.py  tool.py  user.py  voice.py
eve/agents/: .env.example  new.yaml  photo.yaml  vincent.yaml
eve/cli/: __init__.py  agent_cli.py  chat_cli.py  deploy_cli.py  start_cli.py  tool_cli.py  upload_cli.py
eve/clients/: common.py
eve/sdk/: README.md
eve/tools/: __init__.py  comfyui_tool.py  gcp_tool.py  local_tool.py  modal_tool.py  replicate_tool.py
reports/: top_users.py
scripts/: create_modal_env.py  deploy_agent.py  test_pubsub.py
sdk/: pyproject.toml  setup.py
sdk/eden/: __init__.py  cli.py  client.py
sdk/eden.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk/tests/: test_beeple.py  test_chat.py  test_chat2.py  test_client.py  test_create.py  test_train.py  test_xhibit.py
snapshots/: _downloads.json  img2vid.json  steerable_motion.json  style_mixing.json  txt2img.json  txt2vid_lcm.json  vid2vid.json
tests/: test_api.py  test_base.py  test_base_tool.py  test_client.py  test_comfyui.py  test_comfyui2.py  test_llm.py  test_modal_tool.py  test_mongo.py  test_replicate_tool.py  test_sdk.py  test_story.py  test_tasks.py  test_think.py  test_thread.py  test_tools.py  test_train.py  test_trainer.py
tests/tests_old/: test_story.py  test_think.py
tests_old/: test_api.py  test_sdk.py  test_tasks.py  test_tools.py
tool2/: base.py
tool2/person/: api.yaml
tool3/: base.py  comfyui.py  comfyui2.py  comfyui_tool.py  config.py  config2.py  eden_utils.py  gcp.py  gcp_tool.py  handlers.py  llm.py  local_tool.py  modal_tool.py  models.py  mongo.py  replicate_tool.py  s3.py  test_22.py  test_comfyui_tool.py  test_modal_tool.py  test_mongo.py  test_replicate_tool.py  test_tasks.py  test_tool.py  test_tools.py  test_tools2.py  testt.py  tool.py  tool2.py
tool3/example_tool/: api.yaml  test.json
tool3/tools/: __init__.py
tools/: __init__.py
workflows/: img2vid.json  steerable-motion.json  style_mixing.json  txt2img.json  txt2vid_lcm.json  vid2vid.json  vid2vid_UI.json
writing_tools/: __init__.py
(+184 files in other folders)
