# pyproject.toml
[project]
name = "eve"
version = "0.1.0"
description = "Tool-calling creative assistant framework"
authors = [{ name = "Eden.art", email = "info@eden.art" }]
dependencies = [
    "anthropic>=0.39.0",
    "boto3>=1.35.64",
    "click>=8.1.7",
    "elevenlabs>=1.12.1",
    "fastapi>=0.115.5",
    "gitpython>=3.1.43",
    "google-cloud-aiplatform>=1.72.0",
    "httpx>=0.27.2",
    "instructor>=1.6.4",
    "jsonref>=1.1.0",
    "moviepy>=1.0.3",
    "modal>=0.66.11",
    "numpy>=2.1.3",
    "openai>=1.54.4",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "pydub>=0.25.1",
    "pyjwt>=2.10.0",
    "pymongo==4.6.1",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "replicate==0.22.0",
    "requests>=2.32.3",
    "runwayml>=2.1.0",
    "sentry-sdk>=2.18.0",
    "starlette>=0.41.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "websockets>=14.1",
    "clerk-backend-api>=1.3.1",
    "aiofiles>=24.1.0",
    "python-telegram-bot==21.7",
    "requests-oauthlib==2.0.0",
    "discord>=2.3.2",
]

[project.optional-dependencies]
discord = ["py-cord>=2.4.1"]
telegram = ["python-telegram-bot>=21.7"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
dev-dependencies = [
    "uvicorn>=0.32.0",
    "ruff>=0.7.4",
    "pre-commit>=4.0.1",
    "pylance>=0.19.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
eve = "eve.cli:cli"
