[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eden"
version = "0.1.1"
authors = [
    { name = "Eden.art", email = "gene@eden.art" }
]
description = "Client library Eden"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.25.1",
    "rich==13.7.1",
    "websocket-client==1.8.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
]

[project.scripts]
eden = "eden.cli:main"
